--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,10 @@
         "titleBar.activeBackground": "#00a8d3",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#00a8d399",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "sash.hoverBorder": "#07ccff",
+        "statusBarItem.remoteBackground": "#00a8d3",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
     "peacock.color": "#00a8d3"
 }
