--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Init
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-        id: go
+          go-version: "1.21"
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,6 +56,11 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:go"
+
+      - name: Go Vulnerability Check
+        uses: Templum/govulncheck-action@v1
 
   release:
     name: Release
@@ -66,8 +70,7 @@ jobs:
       - name: Init
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-        id: go
+          go-version: "1.21"
 
       - name: Checkout
         uses: actions/checkout@v4
